<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginTop="5dip"
                android:text="test"
                android:visibility="gone" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_idnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/as_printname" />

            <Spinner
                android:id="@+id/sp_printname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>
        <RadioButton
            android:id="@+id/rb_usb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dp"
            android:text="USB" />

        <RadioButton
            android:id="@+id/rb_net"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dp"

            android:text="Net/WiFi" />
        <LinearLayout
            android:id="@+id/ll_netname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginTop="5dip"
                android:layout_weight="1"
                android:text="@string/at_ipaddress" />
            <EditText
                android:id="@+id/ed_ipaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="5dp"
                android:text="192.168.1.251"
                />
        </LinearLayout>
        <RadioButton
            android:id="@+id/rb_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:text="@string/at_bluetooth" />
        <RadioButton
            android:id="@+id/rb_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dp"
            android:text="@string/at_serial" />
        <LinearLayout
            android:id="@+id/ll_portname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_serialportname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginTop="5dip"
                android:layout_weight="1"
                android:text="@string/at_serialname" />
            <Spinner
                android:id="@+id/sp_serialportname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_portbaud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_serialportbaud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/at_serialportbaud" />
            <Spinner
                android:id="@+id/sp_serialportbaud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_search"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dp"
            android:text="@string/as_search" />
        <Button
            android:id="@+id/bt_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dp"
            android:text="@string/at_connect" />

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            android:textColor="#ff0000"
            android:text=" " />

        <LinearLayout
            android:id="@+id/ll_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_printSample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="10dp"
                android:enabled="false"
                android:text="@string/at_printsample" />

            <Button
                android:id="@+id/bt_barcodeSample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="10dp"
                android:enabled="false"
                android:text="@string/at_barcodeSample" />

            <Button
                android:id="@+id/bt_imageSample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="10dp"
                android:enabled="false"
                android:text="@string/at_imageSample" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_devicesInfo"
            android:layout_width="fill_parent"
            android:layout_height="500dp"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="25dip" >

        </ListView>
    </LinearLayout>
</ScrollView>